adelanto en loguin y restructuracion de carpetas

--- a/aplicativo/index.html
+++ b/aplicativo/index.html
@@ -5,11 +5,11 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
     <script type="text/javascript" language="javascript" src="js/jquery-1.11.2.js" ></script>
     <script type="text/javascript" language="javascript" src="js/ajax_lista.js" ></script>
-    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="../CSS/bootstrap/font-awesome.min.css">
     <link rel="stylesheet" href="js/jquery.min.js">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/css.css" type="text/css">
+    <link rel="stylesheet" href="../CSS/bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="stylesheet" href="../CSS/css.css" type="text/css">
 
   <title>Actas</title>
   <meta charset="utf-8">
